# agenticdb-registry

./: .gitignore  Dockerfile  README.md  build.sh  docker_build.sh  docker_run.sh  generate_agents.py  main.py  pyproject.toml  requirements.txt
app/: generate_agents.py  generate_json_agents.py  generate_yaml_agents.py  remote_runnable_example.py  send_agents.py  server.py  state.py
app/models/: agent.py
app/routes/: accept_type  accept_type.py  agents.py  applications.py  database.py  ratings.py
curl_examples/: add_agent.sh  add_application.sh  delete_collections.sh
docker_agent/: Dockerfile  docker_push.sh  manifest.json  requirements.txt  run.sh
static/: index.html  scripts.js  styles.css
tests/: test_add_agent.py  test_add_agent_json.py  test_add_json_agent_curl.py  test_add_json_application_curl.py  test_add_large_agent.py  test_add_multiple_agents.py  test_add_multiple_agents_single_request.py  test_add_multiple_agents_single_request_json.py  test_agent.py  test_change_ratings.py  test_compose_app.py  test_docker_agent.py  test_get_bad_query.py  test_invoke_agent.py  test_reset_db.py
tests/data/: agents.json  agents.yaml
