[tool.poetry]
name = "agenticdb"
version = "0.1.0"
description = ""
authors = ["BenderScript <6779302+BenderScript@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.2"
uvicorn = "0.30.6"
# langchain-chroma = "0.1.3"
langchain-text-splitters = "0.2.4"
langchain-community = "0.2.16"
langchain-openai = "0.1.23"
python-dotenv = "1.0.1"
langserve = {extras = ["all"], version = "0.2.3"}
langchain-core = "0.2.38"
httpx = "0.27.2"
chromadb = "0.5.5"
pytest= "8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
